# app/controllers/api/v1/venues_controller.rb
@@ -46,7 +46,8 @@ module Api
       end
 
       def venue_params
-        params.require(:venue).permit(:name, :venue_type, :address, :latitude, :longitude)
+        params.require(:venue).permit(:name, :venue_type, :address_line1, :address_line2,
+                                      :city, :state, :country, :postcode, :latitude, :longitude)
       end
     end
   end
