# app/serializers/venue_serializer.rb
@@ -1,7 +1,9 @@
 # frozen_string_literal: true
 
 class VenueSerializer < ApplicationSerializer
-  attributes :id, :name, :venue_type, :address, :latitude, :longitude, :created_at, :updated_at
+  attributes :id, :name, :venue_type, :address_line1, :address_line2,
+             :city, :state, :country, :postcode, :latitude, :longitude,
+             :created_at, :updated_at
 
   has_many :events, serializer: :event
 end
