# config/openapi/api-v1.yml
@@ -858,6 +858,18 @@ components:
               type: string
             venue_type:
               type: string
+            address_line1:
+              type: string
+            address_line2:
+              type: string
+            city:
+              type: string
+            state:
+              type: string
+            country:
+              type: string
+            postcode:
+              type: string
             latitude:
               type: number
               format: float
